Add Python package influential.

--- a/content/publications/journal-article/10.1016:j.tig.2023.01.007/cite.bib
+++ b/content/publications/journal-article/10.1016:j.tig.2023.01.007/cite.bib
@@ -1,10 +1,25 @@
-@ARTICLE{Salavaty2023-ik,
-  title     = "Clonal selection parallels between normal and cancer tissues",
-  author    = "Salavaty, Abbas and Azadian, Esmaeel and Naik, Shalin H and
-               Currie, Peter D",
-  journal   = "Trends Genet.",
-  publisher = "Elsevier BV",
-  month     =  feb,
-  year      =  2023,
-  language  = "en"
+@ARTICLE{Salavaty2023-mw,
+  title    = "Clonal selection parallels between normal and cancer tissues",
+  author   = "Salavaty, Abbas and Azadian, Esmaeel and Naik, Shalin H and
+              Currie, Peter D",
+  abstract = "Clonal selection and drift drive both normal tissue and cancer
+              development. However, the biological mechanisms and environmental
+              conditions underpinning these processes remain to be elucidated.
+              Clonal selection models are centered in Darwinian evolutionary
+              theory, where some clones with the fittest features are selected
+              and populate the tissue or tumor. We suggest that different
+              subclasses of stem cells, each of which is responsible for a
+              distinct feature of the selection process, share common features
+              between normal and cancer conditions. While active stem cells
+              populate the tissue, dormant cells account for tissue
+              replenishment/regeneration in both normal and cancerous tissues.
+              We also discuss potential mechanisms that drive clonal drift,
+              their interactions with clonal selection, and their similarities
+              during normal and cancer tissue development.",
+  journal  = "Trends Genet.",
+  month    =  feb,
+  year     =  2023,
+  keywords = "cancer evolution; clonal drift; clonal selection; stem cells;
+              tissue development; tissue regeneration",
+  language = "en"
 }
