Correct author name.

--- a/content/publications/journal-article/10.1016:j.heliyon.2022.e11093/cite.bib
+++ b/content/publications/journal-article/10.1016:j.heliyon.2022.e11093/cite.bib
@@ -1,7 +1,7 @@
 @ARTICLE{Salavaty2022-vs,
   title     = "Systematic molecular profiling of acute leukemia cancer stem
                cells allows identification of druggable targets",
-  author    = "Salavaty, Abbas and Shehni, Sara Alaei and Ramialison, Mirana
+  author    = "Salavaty, Adrian and Shehni, Sara Alaei and Ramialison, Mirana
                and Currie, Peter D",
   abstract  = "Acute myeloid leukemia (AML) is one of the most prevalent and
                acute blood cancers with a poor prognosis and low overall
