--- a/content/publications/journal-article/10.1016:j.stemcr.2023.05.007/cite.bib
+++ b/content/publications/journal-article/10.1016:j.stemcr.2023.05.007/cite.bib
@@ -6,7 +6,7 @@
               Michael and Mackenzie-Kludas, Charley and Yang Lee, Leo Yi and
               Wang, Mingyang and Pointer, Hayley and Karavendzas, Kathy and
               Abu-Bonsrah, Dad and Drew, Damien and Yang Sun, Yu Bo and Tan,
-              Jia Ping and Sun, Guizhi and Salavaty, Abbas and Charitakis,
+              Jia Ping and Sun, Guizhi and Salavaty, Adrian and Charitakis,
               Natalie and Nim, Hieu T and Currie, Peter D and Tham, Wai-Hong
               and Porrello, Enzo and Polo, Jose M and Humphrey, Sean J and
               Ramialison, Mirana and Elliott, David A and Subbarao, Kanta",
