--- a/content/publications/journal-article/10.1016:j.tig.2023.01.007/cite.bib
+++ b/content/publications/journal-article/10.1016:j.tig.2023.01.007/cite.bib
@@ -1,6 +1,6 @@
 @ARTICLE{Salavaty2023-mw,
   title    = "Clonal selection parallels between normal and cancer tissues",
-  author   = "Salavaty, Abbas and Azadian, Esmaeel and Naik, Shalin H and
+  author   = "Salavaty, Adrian and Azadian, Esmaeel and Naik, Shalin H and
               Currie, Peter D",
   abstract = "Clonal selection and drift drive both normal tissue and cancer
               development. However, the biological mechanisms and environmental
