--- a/content/publications/journal-article/10.1111:acel.13862/cite.bib
+++ b/content/publications/journal-article/10.1111:acel.13862/cite.bib
@@ -1,7 +1,7 @@
 @ARTICLE{Ruparelia2023-ai,
   title    = "The African killifish: A short-lived vertebrate model to study
               the biology of sarcopenia and longevity",
-  author   = "Ruparelia, Avnika A and Salavaty, Abbas and Barlow, Christopher K
+  author   = "Ruparelia, Avnika A and Salavaty, Adrian and Barlow, Christopher K
               and Lu, Yansong and Sonntag, Carmen and Hersey, Lucy and Eramo,
               Matthew J and Krug, Johannes and Reuter, Hanna and Schittenhelm,
               Ralf B and Ramialison, Mirana and Cox, Andrew and Ryan, Michael T
