--- a/content/publications/journal-article/10.1111:jcmm.14458/cite.bib
+++ b/content/publications/journal-article/10.1111:jcmm.14458/cite.bib
@@ -1,7 +1,7 @@
 @ARTICLE{Salavaty2019-jc,
   title     = "Survival analysis and functional annotation of long non-coding
                {RNAs} in lung adenocarcinoma",
-  author    = "Salavaty, Abbas and Rezvani, Zahra and Najafi, Ali",
+  author    = "Salavaty, Adrian and Rezvani, Zahra and Najafi, Ali",
   abstract  = "Long non-coding RNAs (lncRNAs) are a subclass of non-protein
                coding transcripts that are involved in several regulatory
                processes and are considered as potential biomarkers for almost
