Update the publications.

--- a/content/publications/journal-article/10.1002:jcp.26910/cite.bib
+++ b/content/publications/journal-article/10.1002:jcp.26910/cite.bib
@@ -1,7 +1,7 @@
 @ARTICLE{Salavaty2018-zt,
   title     = "Potential role of {RAB6C-AS1} long noncoding {RNA} in different
                cancers",
-  author    = "Salavaty, Abbas and Motlagh, Fatemeh Movahedi and Barabadi,
+  author    = "Salavaty, Adrian and Motlagh, Fatemeh Movahedi and Barabadi,
                Mehri and Cheshomi, Hamid and Esmatabadi, Mohammad Javad Dehghan
                and Shahmoradi, Mozhdeh and Soleimanpour-Lichaei, Hamid Reza",
   abstract  = "BACKGROUND: Long noncoding RNAs (lncRNAs) refer to a group of
