--- a/content/publications/journal-article/10.1016:j.patter.2020.100052/cite.bib
+++ b/content/publications/journal-article/10.1016:j.patter.2020.100052/cite.bib
@@ -1,7 +1,7 @@
 @ARTICLE{Salavaty2020-al,
   title     = "Integrated Value of Influence: An integrative method for the
                identification of the most influential nodes within networks",
-  author    = "Salavaty, Abbas and Ramialison, Mirana and Currie, Peter D",
+  author    = "Salavaty, Adrian and Ramialison, Mirana and Currie, Peter D",
   abstract  = "Biological systems are composed of highly complex networks, and
                decoding the functional significance of individual network
                components is critical for understanding healthy and diseased
