Update citation details of HOTAIR paper.

--- a/content/publications/journal-article/10.7497:j.issn.2095-3941.2015.0006/cite.bib
+++ b/content/publications/journal-article/10.7497:j.issn.2095-3941.2015.0006/cite.bib
@@ -1,6 +1,6 @@
 @ARTICLE{Hajjari2015-ia,
   title    = "{HOTAIR}: an oncogenic long non-coding {RNA} in different cancers",
-  author   = "Hajjari, Mohammadreza and Salavaty, Abbas",
+  author   = "Hajjari, Mohammadreza and Salavaty, Adrian",
   abstract = "Long non-coding RNAs (lncRNAs) refer to a group of RNAs that are
               usually more than 200 nucleotides and are not involved in protein
               generation. Instead, lncRNAs are involved in different regulatory
